# trashmap

./: Cargo.toml  README.md
src/: main.rs
www/: index.html  script.js
